fleet/nginx-webserver/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: k8s-chancey-dev
  labels:
    app: nginx
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
