fleet/nginx-webserver/base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: k8s-chancey-dev
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.k8s.chancey.dev`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`k8s.chancey.dev`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: k8s-chancey-dev-tls
